visual fix for reports tab

--- a/TeamProject/Areas/Admin/Views/Reports/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Reports/Index.cshtml
@@ -14,7 +14,7 @@
     <li class="nav-item">
         <a class="nav-link"
            href="#"
-           container="#total-price-per-month">Total bookings last six months</a>
+           container="#total-price-per-month">Total earnings from bookings in the last six months</a>
     </li>
 </ul>
 <div id="total-bookings-per-weekdays">
