--- a/TeamProject/Views/Shared/_NavBarPartial.cshtml
+++ b/TeamProject/Views/Shared/_NavBarPartial.cshtml
@@ -2,17 +2,18 @@
 
 
 <nav class="navbar navbar-dark navbar-expand-lg sticky-top bg-dark test">
-    @Html.ActionLink("BookYourCourt", "Index", "Home", new { area = "" }, new { @class = "navbar-brand font-italic" })
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+    <a class="navbar-brand" href="/home/index">
+        <img src="~/Images/Logo/Kick it logo.png" width="100" height="25" alt="KickIt" />
+    </a>
+    
+
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">        
+        <ul class="navbar-nav">
             @if (Session["User"] != null)
-            {               
-                if(User.IsInRole("Admin")||User.IsInRole("Owner"))
+            {
+                if (User.IsInRole("Admin") || User.IsInRole("Owner"))
                 {
-                    <li class="nav-item ">
+                    <li class="nav-item " style="padding-top:5px;">
                         @Html.ActionLink("Panel", "Index", "Panel", new { area = "Admin" }, new { @class = "navbar-brand" })
                     </li>
                 }
