minor fix in report graphs/applied new site name in the views

--- a/TeamProject/Views/Home/Index.cshtml
+++ b/TeamProject/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<TeamProject.Models.Court>
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home Page - Kickit";
     Layout = "~/Views/Shared/_LayoutHome.cshtml";
 }
 @section Styles{
