--- a/TeamProject/Views/Shared/_FooterPartial.cshtml
+++ b/TeamProject/Views/Shared/_FooterPartial.cshtml
@@ -80,7 +80,7 @@
     <!-- Footer Links -->
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3 text-secondary">
-        &copy; @DateTime.Now.Year - BookYourCourt - All Rights Reserved
+        &copy; @DateTime.Now.Year - Kickit - All Rights Reserved
     </div>
     <!-- Copyright -->
 </footer>
