--- a/TeamProject/Views/Shared/_HomePageFooterPartial.cshtml
+++ b/TeamProject/Views/Shared/_HomePageFooterPartial.cshtml
@@ -38,7 +38,7 @@
             <!-- Grid column -->
             <div class="col-md-8 col-12 mt-5 text-secondary">
                 <p style="line-height: 1.7rem;">
-                    BookYourCourt begun as an academic project of a 5-member team, that evolved into a life work project.
+                    Kickit begun as an academic project of a 5-member team, that evolved into a life work project.
                     Bounded by our common passion, football, we created an easy-to-use website, where experienced players,
                     formed teams and football enthusiasts can find their nearest court to play!
                     Thanks for showing interest in our website. Recommendations and suggestions are most welcomed! If you wish to
@@ -52,7 +52,7 @@
         <!-- Grid row-->
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3 text-secondary">
-        &copy; @DateTime.Now.Year - BookYourCourt - All Rights Reserved
+        &copy; @DateTime.Now.Year - Kickit - All Rights Reserved
     </div>
     <!-- Copyright -->
 </footer>
