--- a/TeamProject/Views/Shared/_LayoutHome.cshtml
+++ b/TeamProject/Views/Shared/_LayoutHome.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="accept-language" content="el-GR">
-    <title>@ViewBag.Title - TeamProject</title>
+    <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/HomePage.css")
     @RenderSection("Styles", false)
