--- a/TeamProject/Views/Courts/Index.cshtml
+++ b/TeamProject/Views/Courts/Index.cshtml
@@ -48,10 +48,14 @@
     <div class="card mb-3 rounded rounded-lg border border-success d-flex p-2 bd-highlight d-flex shadow-lg">
         <div class="row no-gutters">
             <div class="col-md-4" style="margin-top:auto;margin-bottom:auto;">
-                <img src="~/Images/Courts/@court.ImageCourt" class="card-img shadow" alt="@court.Name" id="myImg">
+                <img src="~/Images/Courts/@court.ImageCourt" 
+                     class="card-img shadow click-court-image" 
+                     alt="@court.Name" 
+                     data-modal-id="#modal-img-@court.Id">
                 <div id="myModal" class="modal">
-                    <span class="close">&times;</span>
-                    <img class="modal-content" id="img01">
+                    <span class="close modal-close-img">&times;</span>
+                    <img class="modal-content" 
+                         id="modal-img-@court.Id">
                     <div id="caption"></div>
                 </div>
             </div>
@@ -76,26 +80,21 @@
 }
 @section Scripts{
     <script>
-        // Get the modal
-        var modal = document.getElementById('myModal');
 
-        // Get the image and insert it inside the modal - use its "alt" text as a caption
-        var img = document.getElementById('myImg');
-        var modalImg = document.getElementById('img01');
-        var captionText = document.getElementById("caption");
-        img.onclick = function () {
-            modal.style.display = "block";
-            modalImg.src = this.src;
-            captionText.innerHTML = this.alt;
-        }
+        // set on click modal
+        $('.click-court-image').click(function () {
+            // get modal image using this.data-modal-id
+            const modalImg = $($(this).attr('data-modal-id'));
 
-        // Get the <span> element that closes the modal
-        var span = document.getElementsByClassName("close")[0];
+            $(modalImg).closest('div').attr('style','display:block');
+            $(modalImg).attr('src', $(this).attr('src'));
+
+        });
 
         // When the user clicks on <span> (x), close the modal
-        span.onclick = function () {
-            modal.style.display = "none";
-        }
+        $('.modal-close-img').click(function () {
+            $(this).closest('div').attr('style', 'display:none');
+        });
     </script>
 
 
