--- a/TeamProject/Views/Courts/Index.cshtml
+++ b/TeamProject/Views/Courts/Index.cshtml
@@ -55,7 +55,7 @@
                     <span class="close close-modal-image">&times;</span>
                     <img src="~/Images/Courts/@court.ImageCourt"
                          class="modal-content">
-                    <div id="caption"></div>
+                    <div id="caption">@court.Name</div>
                 </div>
             </div>
             <div class="col-md-8">
