--- a/TeamProject/Views/Home/Contact.cshtml
+++ b/TeamProject/Views/Home/Contact.cshtml
@@ -20,7 +20,7 @@
                 <br />Omonoia 39<br />
                 Athina 105 64, Greece<br />
                 <abbr title="Phone">Phone:</abbr>
-                801-11-BookYourCourt
+                801-11-KickIt
             </address>
 
             <address>
@@ -78,7 +78,7 @@
                         @Html.ValidationMessageFor(model => model.Body, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <input type="submit" value="Submit">
+                <input type="submit" value="Submit" style="float:right;">
             }
         </div>
     </div>
