--- a/TeamProject/Views/Courts/Details.cshtml
+++ b/TeamProject/Views/Courts/Details.cshtml
@@ -3,6 +3,43 @@
 @{
     ViewBag.Title = "Details";
 }
+
+@section Styles{
+    <style>
+
+        .wrap {
+            height: 100%;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .button {
+            width: 140px;
+            height: 45px;
+            font-family: 'Roboto', sans-serif;
+            font-size: 11px;
+            text-transform: uppercase;
+            letter-spacing: 2.5px;
+            font-weight: 500;
+            color: #000;
+            background-color: beige;
+            border: none;
+            border-radius: 45px;
+            box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease 0s;
+            cursor: pointer;
+            outline: none;
+        }
+
+            .button:hover {
+                background-color: #2EE59D;
+                box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+                color: #fff;
+                transform: translateY(-7px);
+            }
+    </style>
+}
+
 <br />
 <h2 class="text-center">@Model.Name Details</h2>
 
@@ -24,7 +61,16 @@
     </div>
 </div>
 
-
-<div class="mt-5">
-    @Html.ActionLink("Back to Courts", "Index", "Courts", new { id = Model.Branch.Id }, null)
+<hr />
+<div class="row">
+    <div class="col-md-10 col-2">
+        <form action="/Courts/index/@Model.Id" style="float:right;">
+            <button class="button shadow" role="button" aria-pressed="true">Back to Courts</button>
+        </form>
+    </div>
+    <div class="col-md-2 col-2">
+        <form action="/Courts/booking/@Model.Id" >
+            <button class="button shadow" role="button" aria-pressed="true">Book Now!</button>
+        </form>
+    </div>
 </div>
