--- a/TeamProject/Views/Courts/Details.cshtml
+++ b/TeamProject/Views/Courts/Details.cshtml
@@ -64,7 +64,7 @@
 <hr />
 <div class="row">
     <div class="col-md-10 col-2">
-        <form action="/Courts/index/@Model.Id" style="float:right;">
+        <form action="/Courts/index/@Model.BranchId" style="float:right;">
             <button class="button shadow" role="button" aria-pressed="true">Back to Courts</button>
         </form>
     </div>
