--- a/TeamProject/Views/Courts/Index.cshtml
+++ b/TeamProject/Views/Courts/Index.cshtml
@@ -39,7 +39,13 @@
                 box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
                 color: #fff;
                 transform: translateY(-7px);
-            }       
+            }
+        .insideimg {
+            background-color: #2EE59D;
+            box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+            color: #fff;
+            transform: translateY(-7px);
+        }     
     </style>
 }
 
@@ -52,7 +58,7 @@
                 <div class="modal d-none">
                     <span class="close close-modal-image" style="color:white;">&times;</span>
                     <img src="~/Images/Courts/@court.ImageCourt"
-                         class="modal-content">
+                         class="modal-content insideimg">
                     <div id="caption">@court.Name</div>
                 </div>
             </div>
