--- a/TeamProject/Views/Home/Index.cshtml
+++ b/TeamProject/Views/Home/Index.cshtml
@@ -50,7 +50,7 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
-<div class="row">
+<div class="row" style="margin-right:0;">
     <div class="col-md-12 margin-toper">
         <form id="form-submit" class="input-group" method="post" action="/Branches/Nearest">
             <input id="autocomplete" class="form-control border-secondary py-2 form-control col-md-4 rounded-pill border-success leftmarge" type="search" placeholder="Search">
