Some changed to Google maps

--- a/TeamProject/Areas/Admin/Views/Bookings/Delete.cshtml
+++ b/TeamProject/Areas/Admin/Views/Bookings/Delete.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Delete";
 }
-<h2>Delete Booking</h2>
+<h2 class="text-center">Delete Booking</h2>
 <h3>Are you sure you want to delete this?</h3>
 <div>
    
