--- a/TeamProject/Areas/Admin/Views/BranchFacilities/ChooseFacilities.cshtml
+++ b/TeamProject/Areas/Admin/Views/BranchFacilities/ChooseFacilities.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Choose Facilities";
 }
-<h2>Edit Facilities</h2>
+<h2 class="text-center">Edit Facilities</h2>
 <br />
 
 @using (Html.BeginForm())
