--- a/TeamProject/Areas/Admin/Views/Branches/Create.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Create.cshtml
@@ -19,7 +19,7 @@
     </style>
 }
 
-    <h2>Create Branch</h2>
+    <h2 class="text-center">Create Branch</h2>
 
 @using (Html.BeginForm("Create", "Branches", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
