--- a/TeamProject/Areas/Admin/Views/Branches/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Edit.cshtml
@@ -19,7 +19,7 @@
         }
     </style>
 }
-    <h2>Edit Branch</h2>
+    <h2 class="text-center">Edit Branch</h2>
 @using (Html.BeginForm("Edit", "Branches", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
