--- a/TeamProject/Areas/Admin/Views/Bookings/Details.cshtml
+++ b/TeamProject/Areas/Admin/Views/Bookings/Details.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Details";
 }
-<h2>Details Booking</h2>
+<h2 class="text-center">Details Booking</h2>
 <div>
    
     <hr />
