--- a/TeamProject/Areas/Admin/Views/Branches/Delete.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Delete.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete Branch</h2>
+<h2 class="text-center">Delete Branch</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
