--- a/TeamProject/Areas/Admin/Views/Branches/Details.cshtml
+++ b/TeamProject/Areas/Admin/Views/Branches/Details.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="container-fluid">
-    <h2>Branch Details</h2>
+    <h2 class="text-center">Branch Details</h2>
     <div class="row">
         <div class="col-sm">
             <hr />
@@ -35,21 +35,7 @@
                     @Html.DisplayFor(model => model.Longitude)
                 </dd>
 
-                <dt>
-                    @Html.DisplayNameFor(model => model.Latitude)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Latitude)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.City)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.City)
-                </dd>
+         
 
                 <dt>
                     @Html.DisplayNameFor(model => model.Address)
@@ -57,14 +43,6 @@
 
                 <dd>
                     @Html.DisplayFor(model => model.Address)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.ZipCode)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.ZipCode)
                 </dd>
 
             </dl>
