--- a/TeamProject/Areas/Admin/Views/Courts/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Courts/Index.cshtml
@@ -4,10 +4,13 @@
     ViewBag.Title = "Courts";
 }
 
-<h2>Courts</h2>
-<p>
-    @Html.ActionLink("Create New", "Create", new { id = ViewBag.Id })
-</p>
+<h2 class="text-center">Courts</h2>
+@if (User.IsInRole("Admin"))
+{
+    <p>
+        @Html.ActionLink("Create New", "Create", new { id = ViewBag.Id })
+    </p>
+}
 <table class="table">
     <tr>
         <th>
@@ -46,7 +49,7 @@
                     </a>
                     <div class="push popover__content">
                         <p class="popover__message">@Html.DisplayFor(modelitem => item.Name)</p>
-                        <img width="200" src="~/Images/Courts/@Url.Content(item.ImageCourt) "/>
+                        <img width="200" src="~/Images/Courts/@Url.Content(item.ImageCourt) " />
                     </div>
                 </div>
             </td>
@@ -59,8 +62,16 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                 @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
-                @Html.ActionLink("TimeSlots", "Index", "TimeSlots", new { id = item.Id }, null)
+                @if (User.IsInRole("Admin"))
+                {
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+
+                }
+                @if (User.IsInRole("Owner"))
+                {
+                    @Html.Raw("| ")
+                    @Html.ActionLink("TimeSlots", "Index", "TimeSlots", new { id = item.Id }, null)
+                }
             </td>
         </tr>
     }
