--- a/TeamProject/Areas/Admin/Views/Facilities/Create.cshtml
+++ b/TeamProject/Areas/Admin/Views/Facilities/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create Facility</h2>
+<h2 class="text-center">Create Facility</h2>
 
 
 @using (Html.BeginForm("Create", "Facilities", FormMethod.Post, new { enctype = "multipart/form-data" })) 
