--- a/TeamProject/Areas/Admin/Views/Facilities/Delete.cshtml
+++ b/TeamProject/Areas/Admin/Views/Facilities/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete Facility</h2>
+<h2 class="text-center">Delete Facility</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
