--- a/TeamProject/Areas/Admin/Views/Facilities/Edit.cshtml
+++ b/TeamProject/Areas/Admin/Views/Facilities/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit Facility</h2>
+<h2 class="text-center">Edit Facility</h2>
 
 
 @using (Html.BeginForm("Edit", "Facilities", FormMethod.Post, new { enctype = "multipart/form-data" }))
