--- a/TeamProject/Areas/Admin/Views/Facilities/Index.cshtml
+++ b/TeamProject/Areas/Admin/Views/Facilities/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Facilities";
 }
 
-<h2>@ViewBag.Title</h2>
+<h2 class="text-center">@ViewBag.Title</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
