fix hidden on html

--- a/TeamProject/Views/Branches/Nearest.cshtml
+++ b/TeamProject/Views/Branches/Nearest.cshtml
@@ -88,22 +88,23 @@
         "['{0}',{1},{2},'{3}','{4}','{5}'],", branch.Name, branch.Latitude, branch.Longitude, $"/Images/Branches/{branch.ImageBranch}", branch.Address, $"/courts/index/{branch.Id}");
 
 }
-<div class="cards"></div>
 <!--Google map marker pin info-->
-<div class="card mb-3 rounded rounded-lg d-flex p-2 bd-highlight d-flex d-none">
-    <div class="row no-gutters">
-        <div class="col-md-4">
-            <img src="" class="card-img" alt="">
-        </div>
-        <div class="col-md-8">
-            <div class="card-body align-content-end flex-column">
-                <h5 class="card-title"></h5>
-                <h6 class="card-text"></h6>
-                <a href=""
-                   class="btn btn-success btn-lg active mt-auto"
-                   role="button" aria-pressed="true">
-                    View details!
-                </a>
+<div class="d-none hidden-marker-card">
+    <div class="card mb-3 rounded rounded-lg d-flex p-2 bd-highlight d-flex">
+        <div class="row no-gutters">
+            <div class="col-md-4">
+                <img src="" class="card-img" alt="">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body align-content-end flex-column">
+                    <h5 class="card-title"></h5>
+                    <h6 class="card-text"></h6>
+                    <a href=""
+                       class="btn btn-success btn-lg active mt-auto"
+                       role="button" aria-pressed="true">
+                        View details!
+                    </a>
+                </div>
             </div>
         </div>
     </div>
