--- a/TeamProject/Views/UserBooking/Index.cshtml
+++ b/TeamProject/Views/UserBooking/Index.cshtml
@@ -4,7 +4,11 @@
     ViewBag.Title = "Index";
 }
 
-
+@if(Model.Count() == 0)
+{
+    <br />
+    <h1 class="text-center"> U have no bookings yet. </h1>
+}
 
 @foreach (var booking in Model)
 {
