--- a/TeamProject/Views/Courts/Booking.cshtml
+++ b/TeamProject/Views/Courts/Booking.cshtml
@@ -35,21 +35,38 @@
         <div id="data-container"></div>
 
         <!-- Modal for booking confirmation -->
-        <div class="modal fade" id="confirm-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="confirm-modal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Title</h5>
+                        <h5 class="modal-title" id="confirmModalLabel">Title</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
-                        
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary cancel-button" data-dismiss="modal">Cancel</button>
                         <button type="button" class="btn btn-primary confirm-button" id="confirm-booking">Confirm</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal for errors -->
+        <div class="modal fade" id="error-modal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="errorModalLabel">Title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+
+                    </div>
+                    <div class="modal-footer">
                         <button type="button" class="btn btn-primary ok-button" data-dismiss="modal">Ok</button>
                     </div>
                 </div>
@@ -185,27 +202,27 @@
 
             function openModalConfirmation(dateTime, courtName, courtPrice) {
                 openModal({
+                    modalForm: $('#confirm-modal'),
                     title: 'Please Confirm Booking Info',
                     body: `<h4>${dateTime}</h4>
                            <p><strong>Court : </strong>${courtName}</p>
-                           <p><strong>Cost : </strong>${courtPrice}&euro;</p>`,
-                    buttons: ['cancel','confirm']
+                           <p><strong>Cost : </strong>${courtPrice}&euro;</p>`
                 });
             }
             function openModalWithError(title, message) {
                 openModal({
+                    modalForm: $('#error-modal'),
                     title: title,
-                    body: message,
-                    buttons: ['ok']
+                    body: message
                 });
             }
 
             function openModal(options) {
-                $('#confirm-modal .modal-title').text(options.title);
-                $('#confirm-modal .modal-body').html(options.body);
-                $('#confirm-modal .modal-footer button').hide();
-                options.buttons.map(b => $(`#confirm-modal .${b}-button`).show());
-                $('#confirm-modal').modal('show');
+                options.modalForm.find('.modal-title')
+                    .text(options.title);
+                options.modalForm.find('.modal-body')
+                    .html(options.body);
+                options.modalForm.modal('show');
             }
 
             function onBookingConfirm() {
